--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: generic
 
 env:
   global:
-    - APM_TEST_PACKAGES="markdown-preview"
+    - APM_TEST_PACKAGES=""
     - ATOM_LINT_WITH_BUNDLED_NODE="true"
 
   matrix:
