--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+      - name: Set up Node.js environment
+        uses: actions/setup-node@v1
       - name: Set up Atom environment
         uses: UziTech/action-setup-atom@v1
         with:
@@ -42,5 +44,5 @@ jobs:
         run: apm --version
       - name: Install dependencies
         run: apm install
-      - name: Run APM test
-        run: apm --test spec
+      - name: Run NPM test
+        run: npm run test
