Add Noto Sans HK

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "M+ 2p",
         "M+ 1m",
         "M+ 2m",
+        "Noto Sans HK",
         "Noto Sans JP",
         "Noto Sans KR",
         "Noto Sans SC",
@@ -87,6 +88,7 @@
         "M+ 2p",
         "M+ 1m",
         "M+ 2m",
+        "Noto Sans HK",
         "Noto Sans JP",
         "Noto Sans KR",
         "Noto Sans SC",
