Add Sarasa Mono HC and K

--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
         "M+ 1m",
         "M+ 2m",
         "Ricty Diminished",
+        "Sarasa Mono HC",
         "Sarasa Mono J",
+        "Sarasa Mono K",
         "Sarasa Mono SC",
         "Sarasa Mono TC"
       ]
@@ -71,7 +73,9 @@
         "Noto Sans SC",
         "Noto Sans TC",
         "Ricty Diminished",
+        "Sarasa Mono HC",
         "Sarasa Mono J",
+        "Sarasa Mono K",
         "Sarasa Mono SC",
         "Sarasa Mono TC"
       ]
@@ -94,7 +98,9 @@
         "Noto Sans SC",
         "Noto Sans TC",
         "Ricty Diminished",
+        "Sarasa Mono HC",
         "Sarasa Mono J",
+        "Sarasa Mono K",
         "Sarasa Mono SC",
         "Sarasa Mono TC"
       ]
