--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     tags:
-      - v*
+      - v[0-9]+.[0-9]+.[0-9]+
   pull_request:
     branches:
       - master
@@ -19,7 +19,7 @@ jobs:
           - ubuntu-latest
           - macos-latest
           - windows-latest
-        channel:
+        version:
           - stable
           - beta
       fail-fast: false
@@ -30,7 +30,7 @@ jobs:
       - name: Set up Atom environment
         uses: UziTech/action-setup-atom@v2
         with:
-          version: ${{ matrix.channel }}
+          version: ${{ matrix.version }}
       - name: Check Atom version
         run: atom --version
       - name: Check APM version
