--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Set up Node.js environment
         uses: actions/setup-node@v2
+        with:
+          node-version: lts/*
       - name: Install dependencies
         run: npm ci
       - name: Run code linter
